@@ -18,7 +18,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.elasticsearch.gradle:build-tools:7.17.4"
+        classpath "org.elasticsearch.gradle:build-tools:8.2.3"
     }
 }
 
@@ -33,7 +33,7 @@ repositories {
     mavenCentral()
 }
 
-version = '7.17.4'
+version = '8.2.3'
 
 esplugin {
     description 'English and Russian Morphology for ElasticSearch.'
@@ -49,10 +49,22 @@ configurations {
     restTestSpecs
 }
 
+test {
+    /* workaround for "unable to install test security manager",
+    "The Security Manager is deprecated and will be removed in a future release" */
+    jvmArgs '-Djava.security.manager=allow'
+}
+
+yamlRestTest {
+    /* workaround for "unable to install test security manager",
+    "The Security Manager is deprecated and will be removed in a future release" */
+    jvmArgs '-Djava.security.manager=allow'
+}
+
 dependencies {
-    testRuntimeOnly 'org.apache.logging.log4j:log4j-core:2.17.1'
-    yamlRestTestRuntimeOnly 'org.apache.logging.log4j:log4j-core:2.17.1'
-    implementation "org.apache.lucene.morphology:russian:1.5"
-    implementation "org.apache.lucene.morphology:english:1.5"
-    implementation "org.apache.lucene.morphology:morph:1.5"
+    testRuntimeOnly 'org.apache.logging.log4j:log4j-core:2.17.2'
+    yamlRestTestRuntimeOnly 'org.apache.logging.log4j:log4j-core:2.17.2'
+    implementation "org.apache.lucene.morphology:russian:1.6"
+    implementation "org.apache.lucene.morphology:english:1.6"
+    implementation "org.apache.lucene.morphology:morph:1.6"
 }
